force-app/main/default/objects/GraphicsPackSettings__mdt/GraphicsPackSettings__mdt.object-meta.xml
<CustomObject>
    <label>Graphics Pack Setting</label>
    <pluralLabel>Graphics Pack Settings</pluralLabel>
</CustomObject>