force-app/main/default/objects/GraphicsPackSettings__mdt/fields/AttributionURL__c.field-meta.xml
<CustomField>
    <fullName>AttributionURL__c</fullName>
    <label>Attribution URL</label>
    <type>Url</type>
</CustomField>