force-app/main/default/objects/GraphicsPackSettings__mdt/fields/License2__c.field-meta.xml
<CustomField>
    <fullName>License2__c</fullName>
    <label>License2</label>
    <type>TextArea</type>
</CustomField>