force-app/main/default/objects/GraphicsPackSettings__mdt/fields/License__c.field-meta.xml
<CustomField>
    <fullName>License__c</fullName>
    <label>License</label>
    <type>TextArea</type>
</CustomField>