force-app/main/default/objects/GraphicsPackSettings__mdt/fields/LicenseURL__c.field-meta.xml
<CustomField>
    <fullName>LicenseURL__c</fullName>
    <label>License URL</label>
    <type>Url</type>
</CustomField>